fixed menu spacing and bullet points

--- a/style.css
+++ b/style.css
@@ -184,15 +184,7 @@ nav li:first-child{
   height: auto;
 }
 
-p{
-  text-align: left;
-  text-indent: 50px;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  margin-right: 50px;
-  margin-left: 50px;
-  line-height: 8;
-}
+
 /* YellowTail Headers */
 .yellowtail-regular {
   font-family: "Yellowtail", cursive;
@@ -215,6 +207,17 @@ p{
   text-align: center;
 }
 
+
+
+li{
+  margin-top: 5px;
+  margin-left: 25px;
+  font-family: "Open Sans", sans-serif;
+  color:#592E1A;
+  text-align: left;
+  line-height: 1.5;
+}
+
 p {
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
@@ -225,11 +228,15 @@ p {
   font-variation-settings:
     "wdth" 100;
   color: #592E1A;
-  text-align: center;
+  text-align: left;
+  line-height: 2;
+  padding: 50px;
+  letter-spacing: .5px;
+  text-indent: 60px
 }
 
 .imageFloatLeft{
-  max-width: 400px;
+  max-width: 250px;
   float:left;
   padding: right 20px;
   margin: 0px 0px 15px 20px;
